--- a/europe.html
+++ b/europe.html
@@ -126,21 +126,28 @@ body {
   <div class="leftcolumn">
     <div class="card">
       <h2>Main Course</h2>
-      <img src="pizza.jpg" style= "width:10em; height:12em;" alt="this is a bowl of ramen">
-      <img src="" style= "width:12em; height:12em;" alt="this is a picture of sushi">
-      <img src="" style= "width:12em; height:12em;" alt="this is xiao long bao. they are really good.">
-      <img src="" style= "width:12em; height:12em;" alt="this is kimchi">
-      <p>These are some of the most famous foods in Asia. They come from many different countries such as Korea, Taiwan, China, and Japan.</p>
-      <p></p>
+      <img src="pizza.jpg" style= "width:12em; height:12em;" alt="this is pizza">
+      <img src="pasta.jpg" style= "width:12em; height:12em;" alt="this is a picture of pasta">
+      <img src="mou.jpg" style= "width:12em; height:12em;" alt="this is moussaka from greece">
+      <img src="arancini.jpg" style= "width:12em; height:12em;" alt="this is arancini from italy">
+      <p>These are some of the most famous foods in Europe. </p>
+      <p>From the left we have the food everyone knows which is pizza and pasta. There are many flavors that everyone ejoys.
+        Next we have Moussaka is an eggplant- or potato-based dish, often including ground meat.
+        Last, we have Arancini are stuffed rice balls which are coated with bread crumbs and then deep fried.
+      </p>
     </div>
     <div class="card">
       <h2>Dessert&Drinks </h2>
-      <img src="" style= "width:14em; height:12em;" alt="this is a picture of boba">
-      <img src="" style= "width:12em; height:12em;" alt="this is a picture of dragon">
-      <img src="" style= "width:12em; height:12em;" alt="this is a picture of an egg tart">
-      <img src="" style= "width:12em; height:12em;" alt="this is a picture of tapioca">
-      <p></p>
-      <p></p>
+      <img src="potica.jpg" style= "width:12em; height:12em;" alt="this is a picture of boba">
+      <img src="waffles.jpg" style= "width:12em; height:12em;" alt="this is a picture of dragon">
+      <img src="creme.jpg" style= "width:12em; height:12em;" alt="this is a picture of an egg tart">
+      <img src="cannoli.jpg" style= "width:12em; height:12em;" alt="this is a picture of tapioca">
+      <p>These are some of the most well known and the best desserts in Europe.</p>
+      <p>The first item is Slovenian potica which is a nut roll and a traditional festive pastry from Slovenia.
+          The next one is a Belgium waffle which everyone enjoys in the mornings or during anytime of day.
+          Next, we have creme brulee which is a very sweet dessert enjoyed by many.
+          The last one we have is cannoli is a dessert where you can enjoy famously in new york but originally from Italy. 
+      </p>
     </div>
   </div>
   <div class="rightcolumn">
@@ -152,10 +159,7 @@ body {
       <h3>Population</h3>
     <p>741.4 million</p>
     </div>
-    <div class="card">
-      <h3>more</h3>
-      <p></p>
-    </div>
+
   </div>
 </div>
 
