--- a/Africa.html
+++ b/Africa.html
@@ -108,16 +108,18 @@ body {
 </head>
 <body>
 
+    <img src="" alt="">
+
 <div class="header">
   <h1>AFRICA</h1>
   <p>Top Picks</p>
 </div>
 
 <div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" style="float:right">Link</a>
+  <a href="https://www.cnn.com/travel/article/africa-food-dishes/index.html">Africa Dish</a>
+  <a href="https://www.tripadvisor.com/Restaurants-g6-Africa.html">Restaurants</a>
+  <a href="https://www.food24.com/Recipes-and-Menus/South-African-Recipes/Top-10-South-African-dessert-recipes-20121112">Desserts</a>
+  <a href="http://ayibamagazine.com/african-chefs-cooking-storm/" style="float:right">Top Chefs</a>
 </div>
 
 <div class="row">
@@ -160,10 +162,6 @@ body {
       <p>Some text..</p>
     </div>
   </div>
-</div>
-
-<div class="footer">
-  <h2>Footer</h2>
 </div>
 
 </body>
