--- a/Africa.html
+++ b/Africa.html
@@ -132,24 +132,24 @@ body {
       <img src="Bobotie.jpeg" alt="Bobotie" style="width:14em; height:12em;">
       <img src="Fufu.jpg" alt="Fufu" style="width:14em; height:12em;"></center>
 
-      <center><img src="cassava.jpg" alt="" style="width:14em; height:12em;"> 
+      <center><img src="cassava.jpg" alt="" style="width :14em; height:12em;"> 
       <img src="mandazi.jpg" alt="" style="width:14em; height:12em;"></center>
-      <p>1)Jollof Rice 2)Bobotie 3)Fufu 4)Cassava 5)Mandazi</p>
-      <p>type the description</p>
+      <p> Jollof Rice, Bobotie, Fufu, Cassava, and Mandaziare are the top foods to pick up when in Africa. </p>
     </div>
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
+      <h2>DESSERTS</h2>
+      <h5>TOP 5</h5>
+      <!-- <div class="fakeimg" style="height:200px;">Image</div> -->
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <h2>Popular Restaurant</h2>
+      <!-- <div class="fakeimg" style="height:100px;">Image</div> -->
+      <img src="" alt="">
+      <p>La Colombe Restaurant</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
