--- a/europe.html
+++ b/europe.html
@@ -162,7 +162,13 @@ body {
 
   </div>
 </div>
+<button onclick="goBack()">Go Back</button>
 
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 
 </body>
 </html>
