--- a/northamerica.html
+++ b/northamerica.html
@@ -217,7 +217,13 @@ body {
     </div>
   </div>
 </div>
+<button onclick="goBack()">Go Back</button>
 
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 
 
 </body>
