--- a/Africa.html
+++ b/Africa.html
@@ -163,6 +163,12 @@ body {
     </div>
   </div>
 </div>
+<button onclick="goBack()">Go Back</button>
 
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 </body>
 </html>
