--- a/asia.html
+++ b/asia.html
@@ -164,7 +164,13 @@ body {
     </div>
    
   </div>
+  <button onclick="goBack()">Go Back</button>
 
+  <script>
+  function goBack() {
+    window.history.back();
+  }
+  </script>
 
 </body>
 </html>
